--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <body>
     <!-- Header section -->
     <header>
+        ![Alt text](./images/logo.svg)
         <img src="./images/logo.svg">
     </header>
 
