--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
     <!-- Main content section -->
     <main>
+        ![Alt text](./images/illustration-mockups.svg)
         <img src="./images/illustration-mockups.svg">
         <div>
             <h1>Build The Community <br> Your Fans Will Love</h1>
